add_subdirectory(0044_0072)
llvm_singlesource_fujitsu(PREFIX "Fujitsu-C++-")
set_property(SOURCE 0044_0015.cc APPEND PROPERTY COMPILE_OPTIONS "-std=c++03")
set_property(SOURCE 0044_0017.cc APPEND PROPERTY COMPILE_OPTIONS "-std=c++03")
set_property(SOURCE 0044_0078.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0078 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0044_0079.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0079 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0044_0080.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0080 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0044_0081.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0081 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0044_0082.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0082 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0044_0083.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0083 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0044_0084.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0084 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0044_0085.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0085 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0044_0086.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0086 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0044_0087.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0087 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0044_0099.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0099 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0044_0106.cc APPEND PROPERTY COMPILE_OPTIONS "-std=c++03")
set_property(SOURCE 0044_0113.cc APPEND PROPERTY COMPILE_OPTIONS "-std=c++03")
set_property(SOURCE 0044_0114.cc APPEND PROPERTY COMPILE_OPTIONS "-std=c++03")
set_property(SOURCE 0044_0115.cc APPEND PROPERTY COMPILE_OPTIONS "-std=c++03")
set_property(SOURCE 0044_0116.cc APPEND PROPERTY COMPILE_OPTIONS "-std=c++03")
set_property(SOURCE 0044_0117.cc APPEND PROPERTY COMPILE_OPTIONS "-std=c++03")
set_property(SOURCE 0044_0118.cc APPEND PROPERTY COMPILE_OPTIONS "-std=c++03")
set_property(SOURCE 0044_0119.cc APPEND PROPERTY COMPILE_OPTIONS "-std=c++03")
set_property(SOURCE 0044_0120.cc APPEND PROPERTY COMPILE_OPTIONS "-std=c++03")
set_property(SOURCE 0044_0121.cc APPEND PROPERTY COMPILE_OPTIONS "-std=c++03")
set_property(SOURCE 0044_0126.cc APPEND PROPERTY COMPILE_OPTIONS "-std=c++03")
set_property(SOURCE 0044_0131.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0131 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0044_0132.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0132 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0044_0133.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0133 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0044_0134.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0134 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0044_0135.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0135 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
set_property(SOURCE 0044_0136.cc APPEND PROPERTY COMPILE_OPTIONS "-fopenmp")
set_property(TARGET Fujitsu-C++-0044_0136 APPEND PROPERTY LINK_OPTIONS "-fopenmp")
