add_subdirectory(0178_0010)
add_subdirectory(0178_0012)
add_subdirectory(0178_0013)
add_subdirectory(0178_0015)
add_subdirectory(0178_0019)
add_subdirectory(0178_0025)
add_subdirectory(0178_0031)
llvm_singlesource_compile_only_file(0178_0005.c PREFIX "Fujitsu-C-")
llvm_singlesource_compile_only_file(0178_0006.c PREFIX "Fujitsu-C-")
llvm_singlesource_fujitsu(PREFIX "Fujitsu-C-")
set_property(SOURCE 0178_0000.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0001.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0002.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0003.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0004.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0005.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0006.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0007.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0008.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0008.c APPEND PROPERTY COMPILE_OPTIONS "-fsigned-char")
set_property(SOURCE 0178_0009.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0009.c APPEND PROPERTY COMPILE_OPTIONS "-O0;-fsigned-char")
set_property(TARGET Fujitsu-C-0178_0009 APPEND PROPERTY LINK_OPTIONS "-O0")
set_property(SOURCE 0178_0011.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0014.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0014.c APPEND PROPERTY COMPILE_OPTIONS "-O0")
set_property(TARGET Fujitsu-C-0178_0014 APPEND PROPERTY LINK_OPTIONS "-O0")
set_property(SOURCE 0178_0016.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0017.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0018.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0018.c APPEND PROPERTY COMPILE_OPTIONS "-O0")
set_property(TARGET Fujitsu-C-0178_0018 APPEND PROPERTY LINK_OPTIONS "-O0")
set_property(SOURCE 0178_0020.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0021.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0024.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0026.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0027.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0028.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0029.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0030.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0032.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
set_property(SOURCE 0178_0033.c APPEND PROPERTY INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}//include")
